--- a/src/assets/sass/layout/default/_content.scss
+++ b/src/assets/sass/layout/default/_content.scss
@@ -6,52 +6,62 @@
 // 
 // =============================================================================
 
+.main-content {
+    // border: 10px solid green;
+    flex-grow: 1;
+    // padding-top: 4rem;
+    // padding-bottom: 4rem;
+}
+
+
+
+
 // 1. Main Content Container
 // ------------------
 
-.main-content
-{
-    // border: 10px solid blue;
+// .main-content
+// {
+//     // border: 10px solid blue;
 
-	flex-grow: 1;
+// 	flex-grow: 1;
     
-    // // Calculate Position
-    // $position-top: $layout--header--height + $layout--header-tabs--height;
-    // $position-right: 0;
-    // $position-bottom: $layout--footer--height;
-    // $position-left: 0;
+//     // // Calculate Position
+//     // $position-top: $layout--header--height + $layout--header-tabs--height;
+//     // $position-right: 0;
+//     // $position-bottom: $layout--footer--height;
+//     // $position-left: 0;
     
-    // // Position
-    // @extend %flex-column;
-    // @include position(absolute, $position-top $position-right $position-bottom $position-right);
+//     // // Position
+//     // @extend %flex-column;
+//     // @include position(absolute, $position-top $position-right $position-bottom $position-right);
 
-    // // Theme
-    // @include property('background-color', 'layout--content--bg-color');
+//     // // Theme
+//     // @include property('background-color', 'layout--content--bg-color');
 
-    // // Animation
-    // @include transition-property(background-color padding-left);
-    // @include transition-duration($layout--sidebar--transition-duration);
+//     // // Animation
+//     // @include transition-property(background-color padding-left);
+//     // @include transition-duration($layout--sidebar--transition-duration);
     
-    // overflow-x: auto;
-    // scroll-behavior: smooth;
-    // z-index: 200 !important;
+//     // overflow-x: auto;
+//     // scroll-behavior: smooth;
+//     // z-index: 200 !important;
 
-    // // border: 2px solid green;
+//     // // border: 2px solid green;
 
-    // & .content-wrapper,
-    // & .page-tab-pane
-    // {
-    //     // Position
-    //     flex: 1;
+//     // & .content-wrapper,
+//     // & .page-tab-pane
+//     // {
+//     //     // Position
+//     //     flex: 1;
 
-    //     // height: auto;
-    //     // min-height: 100%;
-    //     padding-top: 30px;
-    //     padding-right: 50px;
-    //     padding-bottom: 30px;
-    //     padding-left: 50px;
-    // }
-}
+//     //     // height: auto;
+//     //     // min-height: 100%;
+//     //     padding-top: 30px;
+//     //     padding-right: 50px;
+//     //     padding-bottom: 30px;
+//     //     padding-left: 50px;
+//     // }
+// }
 
 
 // Sidebar Open
