--- a/src/assets/sass/layout/default/_footer.scss
+++ b/src/assets/sass/layout/default/_footer.scss
@@ -5,62 +5,71 @@
 // 
 // =============================================================================
 
-
-.main-footer
-{
-    background-image: url(http://wgl-demo.net/atlets/wp-content/uploads/2020/07/footer_bg.png);
+.main-footer {
+    // border: 10px solid red;
+    // background-image: url(http://wgl-demo.net/atlets/wp-content/uploads/2020/07/footer_bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #001322;
     // background-color: #49321c;
-
-    @import "./../../components/footer/footer";
-
-    // // Position
-    // @include position(absolute, null 0 0 0);
-    // @include sizes(100%, $layout--footer--height);
-
-    // // Theme
-    // @extend %border-top-solid-1;
-    // @include property('border-top-color', 'layout--footer--border-top-color');
-    // @include property('background-color', 'layout--footer--bg-color');
-    // @include property('color', 'layout--footer--color');
-    
-    // // Animation
-    // @include transition-property(background-color padding-left);
-    // @include transition-duration($layout--sidebar--transition-duration);
-    
-    // // Font
-    // font-size: $layout--footer--font-size;
-
-    // z-index: 100 !important;
-
-    // & .footer-content
-    // {
-    //     // Position
-    //     @extend %flex-middle;
-    //     height: $layout--footer--height;
-    //     padding-left: 15px;
-    //     padding-right: 15px;
-    // }
 }
 
-
-// // Sidebar Open
-// .main-sidebar-open .main-footer 
+// .main-footer
 // {
-//     padding-left: $layout--footer--padding-start--sidebar-open;
+//     background-image: url(http://wgl-demo.net/atlets/wp-content/uploads/2020/07/footer_bg.png);
+//     background-position: center;
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     background-color: #001322;
+//     // background-color: #49321c;
+
+//     @import "./../../components/footer/footer";
+
+//     // // Position
+//     // @include position(absolute, null 0 0 0);
+//     // @include sizes(100%, $layout--footer--height);
+
+//     // // Theme
+//     // @extend %border-top-solid-1;
+//     // @include property('border-top-color', 'layout--footer--border-top-color');
+//     // @include property('background-color', 'layout--footer--bg-color');
+//     // @include property('color', 'layout--footer--color');
+    
+//     // // Animation
+//     // @include transition-property(background-color padding-left);
+//     // @include transition-duration($layout--sidebar--transition-duration);
+    
+//     // // Font
+//     // font-size: $layout--footer--font-size;
+
+//     // z-index: 100 !important;
+
+//     // & .footer-content
+//     // {
+//     //     // Position
+//     //     @extend %flex-middle;
+//     //     height: $layout--footer--height;
+//     //     padding-left: 15px;
+//     //     padding-right: 15px;
+//     // }
 // }
 
-// // Sidebar Minified
-// .main-sidebar-minify .main-footer 
-// {
-//     padding-left: $layout--footer--padding-start--sidebar-minify;
-// }
 
-// // Sidebar Closed
-// .main-sidebar-close .main-footer 
-// {
-//     padding-left: $layout--footer--padding-start--sidebar-close;
-// }
+// // // Sidebar Open
+// // .main-sidebar-open .main-footer 
+// // {
+// //     padding-left: $layout--footer--padding-start--sidebar-open;
+// // }
+
+// // // Sidebar Minified
+// // .main-sidebar-minify .main-footer 
+// // {
+// //     padding-left: $layout--footer--padding-start--sidebar-minify;
+// // }
+
+// // // Sidebar Closed
+// // .main-sidebar-close .main-footer 
+// // {
+// //     padding-left: $layout--footer--padding-start--sidebar-close;
+// // }
