--- a/src/assets/sass/layout/default/_form.scss
+++ b/src/assets/sass/layout/default/_form.scss
@@ -12,142 +12,142 @@
 // 
 // =============================================================================
 
-// 1. Import Bootstrap Base
-// ------------------
-@import "node_modules/bootstrap/scss/forms/labels";
-@import "node_modules/bootstrap/scss/forms/form-text";
-@import "node_modules/bootstrap/scss/forms/form-control";
-@import "node_modules/bootstrap/scss/forms/form-select";
-@import "node_modules/bootstrap/scss/forms/form-check";
-@import "node_modules/bootstrap/scss/forms/form-range";
-@import "node_modules/bootstrap/scss/forms/floating-labels";
-@import "node_modules/bootstrap/scss/forms/input-group";
-@import "node_modules/bootstrap/scss/forms/validation";
+// // 1. Import Bootstrap Base
+// // ------------------
+// @import "node_modules/bootstrap/scss/forms/labels";
+// @import "node_modules/bootstrap/scss/forms/form-text";
+// @import "node_modules/bootstrap/scss/forms/form-control";
+// @import "node_modules/bootstrap/scss/forms/form-select";
+// @import "node_modules/bootstrap/scss/forms/form-check";
+// @import "node_modules/bootstrap/scss/forms/form-range";
+// @import "node_modules/bootstrap/scss/forms/floating-labels";
+// @import "node_modules/bootstrap/scss/forms/input-group";
+// @import "node_modules/bootstrap/scss/forms/validation";
 
 
-// 2. Legend & Label
-// ------------------
-legend, label {   
-    font-weight: 700;
+// // 2. Legend & Label
+// // ------------------
+// legend, label {   
+//     font-weight: 700;
 
-    &.form-check-label {
-        font-weight: inherit;
-    }
-    &.col-form-label {
-        font-weight: 700;
-    }
-}
-
-
-// 3. Required Symbol
-// ------------------
-legend, label {
-    &.required::after {
-        content: "*";
-        color: $persimmon;
-        padding-left: 4px;
-    }
-}
-label.form-check-label.required::after {
-    display: none;
-}
+//     &.form-check-label {
+//         font-weight: inherit;
+//     }
+//     &.col-form-label {
+//         font-weight: 700;
+//     }
+// }
 
 
-// 4. Form Group
-// ------------------
-.form-group {
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-}
-.form-group + .form-group {
-    margin: 2.5rem 0 0 0;
-    padding: 0 0 0 0;
-}
-.card .form-group.row {
-    margin-left: -15px;
-    margin-right: -15px;
-}
+// // 3. Required Symbol
+// // ------------------
+// legend, label {
+//     &.required::after {
+//         content: "*";
+//         color: $persimmon;
+//         padding-left: 4px;
+//     }
+// }
+// label.form-check-label.required::after {
+//     display: none;
+// }
 
 
-// 5. Form Control
-// ------------------
-.form-control {
-    position: relative;
-    z-index: 2;
-
-    &:focus {
-        outline: 0;
-        box-shadow: none !important;
-        border-color: inherit;
-    }
-}
-
-
-// 6. Feedback
-// ------------------
-label, legend {
-    .valid-feedback,
-    .invalid-feedback {
-        display: none !important;
-    }
-}
+// // 4. Form Group
+// // ------------------
+// .form-group {
+//     margin: 0 0 0 0;
+//     padding: 0 0 0 0;
+// }
+// .form-group + .form-group {
+//     margin: 2.5rem 0 0 0;
+//     padding: 0 0 0 0;
+// }
+// .card .form-group.row {
+//     margin-left: -15px;
+//     margin-right: -15px;
+// }
 
 
-// 7. Feedbacks: Valid
-// ------------------
-.valid-feedback {
-    @include property('background-color', 'form--feedback-valid--bg-color');
-    @include property('color', 'form--feedback-valid--color');
-    border-radius: 0.25rem;
+// // 5. Form Control
+// // ------------------
+// .form-control {
+//     position: relative;
+//     z-index: 2;
+
+//     &:focus {
+//         outline: 0;
+//         box-shadow: none !important;
+//         border-color: inherit;
+//     }
+// }
+
+
+// // 6. Feedback
+// // ------------------
+// label, legend {
+//     .valid-feedback,
+//     .invalid-feedback {
+//         display: none !important;
+//     }
+// }
+
+
+// // 7. Feedbacks: Valid
+// // ------------------
+// .valid-feedback {
+//     @include property('background-color', 'form--feedback-valid--bg-color');
+//     @include property('color', 'form--feedback-valid--color');
+//     border-radius: 0.25rem;
     
-    margin-top: -0.4rem;
-    padding: 0.775rem 0.75rem 0.375rem;
+//     margin-top: -0.4rem;
+//     padding: 0.775rem 0.75rem 0.375rem;
 
-    z-index: 1;
+//     z-index: 1;
 
-    .form-error-icon {
-        display: none;
-    }
-}
-.row + .valid-feedback {
-    margin-top: 0.4rem;
-}
-.was-validated .form-control:invalid:focus, 
-.form-control.is-invalid:focus {
-    @include property('background-color', 'form--feedback-valid--border-color');
-    box-shadow: none !important;
-}
+//     .form-error-icon {
+//         display: none;
+//     }
+// }
+// .row + .valid-feedback {
+//     margin-top: 0.4rem;
+// }
+// .was-validated .form-control:invalid:focus, 
+// .form-control.is-invalid:focus {
+//     @include property('background-color', 'form--feedback-valid--border-color');
+//     box-shadow: none !important;
+// }
 
 
-// 8. Feedbacks: Invalid
-// ------------------
-.invalid-feedback {
-    @include property('background-color', 'form--feedback-invalid--bg-color');
-    @include property('color', 'form--feedback-invalid--color');
-    border-radius: 0.25rem;
+// // 8. Feedbacks: Invalid
+// // ------------------
+// .invalid-feedback {
+//     @include property('background-color', 'form--feedback-invalid--bg-color');
+//     @include property('color', 'form--feedback-invalid--color');
+//     border-radius: 0.25rem;
     
-    margin-top: -0.4rem;
-    padding: 0.775rem 0.75rem 0.375rem;
+//     margin-top: -0.4rem;
+//     padding: 0.775rem 0.75rem 0.375rem;
 
-    z-index: 1;
+//     z-index: 1;
 
-    .form-error-icon {
-        display: none;
-    }
-}
-.row + .invalid-feedback {
-    margin-top: 0.4rem;
-}
-.was-validated .form-control:invalid:focus, 
-.form-control.is-invalid:focus {
-    @include property('background-color', 'form--feedback-invalid--border-color');
-    box-shadow: none !important;
-}
+//     .form-error-icon {
+//         display: none;
+//     }
+// }
+// .row + .invalid-feedback {
+//     margin-top: 0.4rem;
+// }
+// .was-validated .form-control:invalid:focus, 
+// .form-control.is-invalid:focus {
+//     @include property('background-color', 'form--feedback-invalid--border-color');
+//     box-shadow: none !important;
+// }
 
 
 
-.form-buttons
-{
-    margin-top: 2rem;
-    text-align: right;
-}
+// .form-buttons
+// {
+//     margin-top: 2rem;
+//     text-align: right;
+// }
